--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tonic = "0.8"
-prost = "0.11"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+anyhow = "1.0.60"
+async-trait = "0.1.57"
 slog = "2.7.0"
 slog-stdlog = "4.1.1"
-
-[build-dependencies]
-tonic-build = "0.8"
