--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.60"
 async-trait = "0.1.57"
-slog = "2.7.0"
 rand = "0.8.5"
+slog = "2.7.0"
+tokio = { version = "1", features = ["time"] }
