--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.60"
 async-trait = "0.1.57"
+futures = "0.3.21"
 rand = "0.8.5"
 slog = "2.7.0"
-tokio = { version = "1", features = ["time"] }
+tokio = { version = "1", features = ["rt", "sync", "time"] }
