--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -12,14 +12,16 @@ name = "straft-client"
 path = "src/client.rs"
 
 [dependencies]
-tonic = "0.8"
-prost = "0.11"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 straft = { path = ".." }
-slog = "2.7.0"
-slog-term = "2.9.0"
-slog-async = "2.7.0"
+anyhow = "1.0.60"
+async-trait = "0.1.57"
 env_logger = "0.9.0"
+prost = "0.11"
+slog = "2.7.0"
+slog-async = "2.7.0"
+slog-term = "2.9.0"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+tonic = "0.8"
 
 [build-dependencies]
 tonic-build = "0.8"
