--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -13,14 +13,14 @@ path = "src/client.rs"
 
 [dependencies]
 straft = { path = ".." }
-anyhow = "1.0.60"
-async-trait = "0.1.57"
+anyhow = "1.0.6"
 env_logger = "0.9.0"
 prost = "0.11"
 slog = "2.7.0"
 slog-async = "2.7.0"
 slog-term = "2.9.0"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+futures = "0.3.21"
 tonic = "0.8"
 
 [build-dependencies]
