--- a/example/grpc/Cargo.toml
+++ b/example/grpc/Cargo.toml
@@ -12,7 +12,7 @@ name = "straft-client"
 path = "src/client.rs"
 
 [dependencies]
-straft = { path = ".." }
+straft = { path = "../.." }
 anyhow = "1"
 env_logger = "0.9.0"
 prost = "0.11"
