--- a/example/grpc/Cargo.toml
+++ b/example/grpc/Cargo.toml
@@ -20,6 +20,7 @@ straft = { path = "../.." }
 anyhow = "1"
 env_logger = "0.9.0"
 prost = "0.11"
+serde_json = "1.0"
 slog = "2.7"
 slog-async = "2.7"
 slog-term = "2.9"
